(Feat): se refactorizó UserServiceImpl y PostMapper